<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_dialog"
    android:orientation="vertical"
    android:padding="@dimen/padding_xlarge">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/event_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_large" />

    <EditText
        android:id="@+id/editEventTitle"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:hint="@string/event_title_hint"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/event_description"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_large" />

    <EditText
        android:id="@+id/editEventDescription"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:hint="@string/event_description_hint"
        android:inputType="textMultiLine"
        android:minLines="2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/event_time"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_large" />

    <TimePicker
        android:id="@+id/timePickerEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:timePickerMode="spinner"
        android:theme="@style/CustomTimePicker" />

</LinearLayout>