<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black">

    <!-- 상단 헤더 영역 -->
    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBack"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/back_button"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/tvRestoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/restore_title"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- 중간 영역 -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        <TextView
            android:id="@+id/tvRestoreDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:gravity="center"
            android:text="@string/restore_description"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_large" />

        <EditText
            android:id="@+id/etUuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_input"
            android:hint="@string/uuid_hint"
            android:inputType="text"
            android:padding="@dimen/padding_xlarge"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_hint"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btnRestore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:background="@color/background_button"
            android:paddingStart="@dimen/padding_xlarge"
            android:paddingTop="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_xlarge"
            android:paddingBottom="@dimen/padding_large"
            android:text="@string/restore_button"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_large" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>