<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_xlarge"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification_list"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMarkAllRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/mark_all_read"
            android:textColor="@color/text_tertiary"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>

    <TextView
        android:id="@+id/textNoNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_notifications"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_large"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNotifications"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/padding_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>