<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black">

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_xlarge"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editStartLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="@drawable/rounded_edittext_background"
            android:drawableStart="@android:drawable/ic_menu_mylocation"
            android:drawablePadding="@dimen/padding_medium"
            android:hint="@string/start_location_hint"
            android:inputType="text"
            android:padding="@dimen/padding_large"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_hint" />

        <EditText
            android:id="@+id/editDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_background"
            android:drawableStart="@android:drawable/ic_menu_directions"
            android:drawablePadding="@dimen/padding_medium"
            android:hint="@string/destination_hint"
            android:inputType="text"
            android:padding="@dimen/padding_large"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_hint" />

        <Button
            android:id="@+id/buttonSearchRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:background="@drawable/rounded_button_background"
            android:text="@string/search_route"
            android:textColor="@color/text_primary" />
    </LinearLayout>

    <!-- 네이버 지도 뷰 -->
    <com.naver.maps.map.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>